--- a/tgui/package.json
+++ b/tgui/package.json
@@ -17,10 +17,11 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-bytediff": "1.0.0",
     "gulp-cssnano": "2.1.0",
+    "gulp-csso": "1.0.1",
     "gulp-if": "2.0.0",
     "gulp-load-plugins": "1.2.0",
+    "gulp-minify-css": "1.2.3",
     "gulp-postcss": "6.0.1",
-    "gulp-rename": "1.2.2",
     "gulp-size": "2.0.0",
     "gulp-sourcemaps": "1.6.0",
     "gulp-stylus": "2.2.0",
@@ -40,6 +41,7 @@
     "ractive-transitions-fade": "0.3.1",
     "rememberify": "1.0.1",
     "require-globify": "1.3.0",
+    "stylus": "0.53.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "webfontloader": "1.6.20"
